# pyace-lite

./: .gitignore  CMakeLists.txt  README.md  rename_manylinux.sh  setup.py
lib/ace/: CMakeLists.txt
lib/ace/ace-evaluator/: CMakeLists.txt
lib/ace/ace-evaluator/extra/: ace_atoms.cpp  ace_atoms.h  ace_calculator.cpp  ace_calculator.h  ace_utils.h
lib/ace/ace-evaluator/extra/utils/: utils_test.cpp  utils_test.h
lib/ace/src/fitting/: ace_b_basis.cpp  ace_b_basis.h  ace_b_basisfunction.cpp  ace_b_basisfunction.h  ace_b_evaluator.cpp  ace_b_evaluator.h  ace_clebsch_gordan.cpp  ace_clebsch_gordan.h  ace_couplings.cpp  ace_couplings.h  ace_spherical_polar.cpp  ace_spherical_polar.h  ace_yaml_input.cpp  ace_yaml_input.h
lib/ace/utils/potentials-conversion/: fortran2yaml.py
lib/ace/utils/wigner-cpp/test/data/: wigner3j_j_rec_jmax10
notebooks/: data_custom_weights.ipynb  data_preprocess.ipynb
src/pyace/: __init__.py  asecalc.py  atomicenvironment.py  basisextension.py  const.py  fitadapter.py  fitcallbacks.py  generalfit.py  helpers.py  paralleldataexecutor.py  preparedata.py  pyacefit.py  pyneighbor.py  radial.py  read_base_conf.py
src/pyace/ace/: ace_c_basis_helper.cpp  ace_c_basis_helper.h  ace_c_basisfunction_helper.cpp  ace_c_basisfunction_helper.h  ace_coupling_binding.cpp  ace_radial_helper.cpp  ace_radial_helper.h  ace_spherical_polar_binding.cpp
src/pyace/ace-evaluator/: ace_bbasis_spec_helper.cpp  ace_bbasis_spec_helper.h  ace_c_basis_binding.cpp  ace_evaluator_binding.cpp
src/pyace/data/: pyace_selected_bbasis_funcspec.pckl.gzip
(+2 files in other folders)
